--- a/_pgbackup/index_1673821769.html
+++ b/_pgbackup/index_1673821769.html
@@ -14,18 +14,16 @@
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
             <header class="mb-auto">
                 <div>
-                    <h3 class="float-md-center mb-0">Strata Sites</h3>
-                    <!-- <nav class="nav nav-masthead justify-content-center float-md-end">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        <a class="nav-link" href="subscribe.html">Subscribe</a>
-                    </nav> -->
+                    <h3 class="float-md-start mb-0">Strata Sites</h3>
+                    <nav class="nav nav-masthead justify-content-center float-md-end"><a class="nav-link active" aria-current="page" href="#">Home</a><a class="nav-link" href="subscribe.html">Subscribe</a>
+                    </nav>
                 </div>
             </header>
             <main class="px-3">
                 <h1>Coming soon.</h1>
                 <p class="lead">Strata Sites is an independent web development agency providing full custom websites, customized wordpress or eccommerce sites, and managed web hosting services.</p>
-                <p class="fst-italic lead">Want plan on launching our full site in 2023.</p>
-                <!-- <p class="lead"> <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Subscribe</a> </p> -->
+                <p class="fst-italic lead">Want to find out when we launch?</p>
+                <p class="lead"> <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Subscribe</a> </p>
             </main>
             <footer class="mt-auto text-white-50">
                 <p>&copy; Strata Sites / Austin Wheeler LLC</p>
