fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <main class="px-3">
                 <h1>Coming soon.</h1>
                 <p class="lead">Strata Sites is an independent web development agency providing full custom websites, customized wordpress or eccommerce sites, and managed web hosting services.</p>
-                <p class="fst-italic lead">Want plan on launching our full site in 2023.</p>
+                <p class="fst-italic lead">We plan on launching our full site in Q1 2023.</p>
                 <!-- <p class="lead"> <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Subscribe</a> </p> -->
             </main>
             <footer class="mt-auto text-white-50">
