Remove existing theme and redesign vanilla

--- a/_pgbackup/index_1673931472.html
+++ b/_pgbackup/index_1673931472.html
@@ -10,17 +10,19 @@
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     </head>
     <body>
-        <div class="main">
-            <header class="header-footer">
-                <h2 class="logo">Strata Sites</h2>
+        <div class="container">
+            <header>
+                <div>
+                    <h2>Strata Sites</h2>
+                </div>
             </header>
-            <main class="hero">
+            <main>
                 <h1>Coming soon.</h1>
                 <p>Strata Sites is an independent web development agency providing full custom websites, customized wordpress or ecommerce sites, and managed web hosting services.</p>
                 <p>We plan on launching our full site in Q1 2023.</p>
             </main>
-            <footer class="header-footer">
-                <p class="footer">Strata Sites / Austin Wheeler LLC</p>
+            <footer>
+                <p>Strata Sites / Austin Wheeler LLC</p>
             </footer>
         </div>
     </body>
