--- a/_pgbackup/index_1673931031.html
+++ b/_pgbackup/index_1673931031.html
@@ -6,21 +6,21 @@
         <meta name="description" content="An independent web development agency made to make the web cool again.">
         <title>Strata Sites</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <link rel="preconnect" href="https://rsms.me/">
-        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     </head>
     <body>
-        <div class="main">
-            <header class="header-footer">
-                <h2 class="logo">Strata Sites</h2>
+        <div>
+            <header>
+                <div>
+                    <h3>Strata Sites</h3>
+                </div>
             </header>
-            <main class="hero">
+            <main>
                 <h1>Coming soon.</h1>
                 <p>Strata Sites is an independent web development agency providing full custom websites, customized wordpress or ecommerce sites, and managed web hosting services.</p>
                 <p>We plan on launching our full site in Q1 2023.</p>
             </main>
-            <footer class="header-footer">
-                <p class="footer">Strata Sites / Austin Wheeler LLC</p>
+            <footer>
+                <p>Strata Sites / Austin Wheeler LLC</p>
             </footer>
         </div>
     </body>
